test/corpus/basics.txt
============
Variables
============

x = 5

---

(source_file
  (expression_statement
    (assignment_statement
      (identifier)
      (number))))

============
Comments
============

// Line comment
x = 5

---

(source_file
  (expression_statement
    (assignment_statement
      (identifier)
      (number))))

============
Strings
============

msg = "Hello, World!"

---

(source_file
  (expression_statement
    (assignment_statement
      (identifier)
      (string))))

============
Template Strings
============

name = "Alice"
msg = "Hello {{name}}"

---

(source_file
  (expression_statement
    (assignment_statement
      (identifier)
      (string)))
  (expression_statement
    (assignment_statement
      (identifier)
      (template_string))))

============
Multiline Strings
============

doc = """
This is a multiline
string in Duso
"""

---

(source_file
  (expression_statement
    (assignment_statement
      (identifier)
      (multiline_string))))

============
Boolean Values
============

flag = true
other = false

---

(source_file
  (expression_statement
    (assignment_statement
      (identifier)
      (boolean)))
  (expression_statement
    (assignment_statement
      (identifier)
      (boolean))))

============
Nil Value
============

empty = nil

---

(source_file
  (expression_statement
    (assignment_statement
      (identifier)
      (nil))))

============
Arrays
============

colors = ["red", "green", "blue"]

---

(source_file
  (expression_statement
    (assignment_statement
      (identifier)
      (array_literal
        (string)
        (string)
        (string)))))

============
Objects
============

config = {timeout: 30, retries: 3}

---

(source_file
  (expression_statement
    (assignment_statement
      (identifier)
      (object_literal
        (object_pair
          (identifier)
          (number))
        (object_pair
          (identifier)
          (number))))))

============
Array Access
============

first = colors[0]

---

(source_file
  (expression_statement
    (assignment_statement
      (identifier)
      (postfix_expression
        (identifier)
        (index_access
          (number))))))

============
Property Access
============

timeout = config.timeout

---

(source_file
  (expression_statement
    (assignment_statement
      (identifier)
      (postfix_expression
        (identifier)
        (property_access
          (identifier))))))

============
Function Declaration
============

function add(x, y)
  return x + y
end

---

(source_file
  (function_declaration
    (identifier)
    (function_parameters
      (parameter_list
        (identifier)
        (identifier)))
    (return_statement
      (additive_expression
        (identifier)
        (identifier)))))

============
If Statement
============

if x > 5 then
  print("x is big")
else
  print("x is small")
end

---

(source_file
  (if_statement
    (comparison_expression
      (identifier)
      (number))
    (function_call
      (string))
    (function_call
      (string))))

============
While Loop
============

counter = 0
while counter < 10 do
  counter = counter + 1
end

---

(source_file
  (expression_statement
    (assignment_statement
      (identifier)
      (number)))
  (while_statement
    (comparison_expression
      (identifier)
      (number))
    (assignment_statement
      (identifier)
      (additive_expression
        (identifier)
        (number)))))

============
For Loop (Numeric)
============

for i = 1, 10 do
  print(i)
end

---

(source_file
  (for_statement
    (identifier)
    (number)
    (number)
    (function_call
      (identifier))))

============
For Loop (Iterator)
============

for item in items do
  print(item)
end

---

(source_file
  (for_statement
    (identifier)
    (identifier)
    (function_call
      (identifier))))

============
Try-Catch
============

try
  result = risky()
catch (error)
  print(error)
end

---

(source_file
  (try_statement
    (assignment_statement
      (identifier)
      (postfix_expression
        (identifier)
        (function_call)))
    (function_call
      (identifier))))

============
Operators - Arithmetic
============

x = 5 + 3
y = 10 - 2
z = 4 * 5
w = 20 / 4

---

(source_file
  (expression_statement
    (assignment_statement
      (identifier)
      (additive_expression
        (number)
        (number))))
  (expression_statement
    (assignment_statement
      (identifier)
      (additive_expression
        (multiplicative_expression
          (number))
        (multiplicative_expression
          (number)))))
  (expression_statement
    (assignment_statement
      (identifier)
      (multiplicative_expression
        (number)
        (number))))
  (expression_statement
    (assignment_statement
      (identifier)
      (multiplicative_expression
        (number)
        (number)))))

============
Operators - Comparison
============

if x == 5 then end
if y != 10 then end
if z < 20 then end

---

(source_file
  (if_statement
    (comparison_expression
      (identifier)
      (number)))
  (if_statement
    (comparison_expression
      (identifier)
      (number)))
  (if_statement
    (comparison_expression
      (identifier)
      (number))))

============
Operators - Logical
============

if x and y then end
if a or b then end
if not c then end

---

(source_file
  (if_statement
    (logical_and_expression
      (identifier)
      (identifier)))
  (if_statement
    (logical_or_expression
      (logical_and_expression
        (identifier))
      (identifier)))
  (if_statement
    (logical_and_expression
      (unary_expression
        (identifier)))))

============
Variable Declaration (var)
============

var localVar = 100

---

(source_file
  (variable_declaration
    (identifier)
    (number)))

============
Compound Assignment
============

x += 5
y -= 3
z *= 2

---

(source_file
  (compound_assignment_statement
    (identifier)
    (number))
  (compound_assignment_statement
    (identifier)
    (number))
  (compound_assignment_statement
    (identifier)
    (number)))

============
Postfix Operations
============

x++
y--

---

(source_file
  (postfix_statement
    (identifier))
  (postfix_statement
    (identifier)))

============
Break and Continue
============

while true do
  if condition then
    break
  end
  continue
end

---

(source_file
  (while_statement
    (boolean)
    (if_statement
      (identifier)
      (break_statement))
    (continue_statement)))

============
Return Statement
============

function getValue()
  return 42
end

---

(source_file
  (function_declaration
    (identifier)
    (function_parameters)
    (return_statement
      (number))))

============
Anonymous Function
============

adder = function(x, y)
  return x + y
end

---

(source_file
  (expression_statement
    (assignment_statement
      (identifier)
      (function_literal
        (function_parameters
          (parameter_list
            (identifier)
            (identifier)))
        (return_statement
          (additive_expression
            (identifier)
            (identifier)))))))

============
Built-in Functions
============

print("hello")
len(arr)
upper("text")

---

(source_file
  (expression_statement
    (postfix_expression
      (builtin)
      (function_call
        (string))))
  (expression_statement
    (postfix_expression
      (builtin)
      (function_call
        (identifier))))
  (expression_statement
    (postfix_expression
      (builtin)
      (function_call
        (string)))))
